layout on mobile devices fixed

--- a/src/Components/CustomModal/modal.scss
+++ b/src/Components/CustomModal/modal.scss
@@ -31,8 +31,8 @@
         background-color: black;
         opacity: 0.5;
         z-index: -1;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
     }
 
     &__container {
@@ -104,7 +104,7 @@
     &__main {
         width: 100%;
         height: 100%;
-        padding: 13px 30px 30px 30px;
+        padding: 13px 30px 5px 30px;
         background: #ADA996;
         /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
