--- a/src/Navigation/navigation.scss
+++ b/src/Navigation/navigation.scss
@@ -3,6 +3,7 @@
     position: fixed;
     top: 0;
     z-index: 2;
+    overflow-y: auto;
 
     .container {
         display: grid;
