--- a/src/pages/Home/Page1/page1.scss
+++ b/src/pages/Home/Page1/page1.scss
@@ -23,7 +23,7 @@
 
     @media(max-width: 670px) {
         flex-direction: column;
-        height: calc(100vh - 60px);
+        height: calc(100vh - 70px);
     }
 
     .block {
